Normalize extension's dependency declaration
Use `List.of(…)` instead of static blocks and other types, more
concise and uniform dependency declarations.

Signed-off-by: thc202 <thc202@gmail.com>